--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Collections</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="log.html">Log In</a></li>
             </ul>
             <div class="cart-icon">
                 <i class="fas fa-shopping-bag"></i>
