--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         }
 
         .hero-slide-content h1 {
-            font-family: 'UnifrakturMaguntia', cursive; /* Teutonic-style bold font */
+            font-family: 'teutonic1.ttf', cursive; /* Teutonic-style bold font */
             font-size: 2.5rem;
             margin-bottom: 10px;
             font-weight: 700;
