--- a/index.html
+++ b/index.html
@@ -324,12 +324,9 @@
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Collections</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="log.html">Login</a></li>
             </ul>
-            <div class="cart-icon">
-                <i class="fas fa-shopping-bag"></i>
-                <span class="cart-count">0</span>
-            </div>
+          
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </div>
